Update batch jobs for Java 21 and Weblogic 14