@@ -49,7 +49,8 @@ HOME=${KEEP_HOME}
 # create properties file and substitutes values
 envsubst <officer-poller.properties.template >officer-poller.properties
 
-CLASSPATH=$CLASSPATH:.:/apps/oracle/libs/commons-logging.jar:/apps/oracle/libs/xstream.jar:/apps/oracle/libs/cglib-nodep.jar:/apps/oracle/libs/joda-time.jar:/apps/oracle/libs/commons-lang.jar:/apps/oracle/libs/ojdbc8.jar:/apps/oracle/libs/wlfullclient.jar:/apps/oracle/libs/spring.jar:/apps/oracle/libs/log4j-core.jar:/apps/oracle/libs/log4j-api.jar:/apps/oracle/libs/log4j-1.2-api.jar:/apps/oracle/officer-bulk-process/officer-bulk-process.jar
+CLASSPATH=$CLASSPATH:.:/apps/oracle/libs/commons-logging.jar:/apps/oracle/libs/xstream.jar:/apps/oracle/libs/cglib-nodep.jar:/apps/oracle/libs/joda-time.jar:/apps/oracle/libs/commons-lang.jar:/apps/oracle/libs/ojdbc11.jar:/apps/oracle/libs/wlthint3client.jar:/apps/oracle/libs/spring.jar:/apps/oracle/libs/log4j-core.jar:/apps/oracle/libs/log4j-api.jar:/apps/oracle/libs/log4j-1.2-api.jar:/apps/oracle/libs/com.bea.core.datasource6.jar:/apps/oracle/libs/com.bea.core.resourcepool.jar:/apps/oracle/libs/com.oracle.weblogic.jdbc.jar:/apps/oracle/officer-bulk-process/officer-bulk-process.jar
+JAVA_ARGS="--add-opens=java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
 
 # Set up mail config for msmtp & load alerting functions
 envsubst <../.msmtprc.template >../.msmtprc
@@ -89,7 +90,7 @@ set_running_lock_file
 
 ## Run FIRST stage of Officer job - EVENT
 f_logInfo "Run FIRST stage of Officer job - EVENT  - SINGLE mode using ${FILE}"
-/usr/java/jdk-8/bin/java -Din=officer-bulk-process -cp $CLASSPATH -Dlog4j.configurationFile=log4j2.xml \
+/usr/java/jdk/bin/java ${JAVA_ARGS} -Din=officer-bulk-process -cp $CLASSPATH -Dlog4j.configurationFile=log4j2.xml \
   uk.gov.companieshouse.officerbulkprocess.OfficerDetailEventPoller normal ${JMS_JNDIPROVIDERURL} bulk-officer.xml ${FILE}
 
 if [ $? -gt 0 ]; then
